name:               pillshs
version:            0.1.0.0
Synopsis:           Pills is a css grid layout, pillshs is pills rewritten with clay
Author:             Paul de Rosanbo <paul@rosanbo.com>
Maintainer:         Paul de Rosanbo <paul@rosanbo.com>
Homepage:           http://rosanbo.com/
Bug-Reports:        http://github.com/polo2ro/pillshs/issues
License:            MIT
License-File:       LICENSE
Category:           Web
build-type:         Simple
cabal-version:      >= 1.10


Library
  Ghc-Options:    -Wall
  Hs-Source-Dirs: src
  Exposed-Modules:
    PillsHs
    PillsHs.Reset
    PillsHs.Mixins
  build-depends:    base == 4.*
                  , clay == 0.11
